# daily-ai-insight-engine-v2

./: .env.example  .gitignore  AGENTS.md  README.md  README_en.md  README_zh.md  pyproject.toml  task.md
config/: defaults.json  sources.json
daily_ai_insight/: __init__.py  cleaning.py  cli.py  clustering.py  config.py  fetchers.py  io_utils.py  llm.py  mcp_client.py  mcp_search.py  models.py  pipeline.py  quality.py  reporting.py  scoring.py  scraper.py  skill_loader.py  source_evaluation.py  structuring.py  time_utils.py  visualization.py
data/: cleaned_news.json  clustered_events.json  importance_scores.json  raw_news.json  source_evaluation.json  structured_news.json  visualization_data.json
docs/: AI使用方式.md  ai-usage.md  ai-usage_zh.md  data-source-decisions.md  data-source-decisions_zh.md  frontend-visualization.md  frontend-visualization_zh.md  process.md  process_zh.md  schema-design.md  schema-design_zh.md  setup.md  setup_zh.md  数据源决策.md  核心流程.md  结构化设计.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/data/: latest.json
frontend/src/: App.tsx  api.ts  main.tsx  types.ts  utils.ts
reports/: daily_ai_report.md  quality_check.json
skills/daily-report-generation/: SKILL.md  prompt.txt
skills/data-source-evaluation/: SKILL.md
skills/event-clustering/: SKILL.md  prompt.txt
skills/importance-scoring/: SKILL.md
skills/news-structuring/: SKILL.md  prompt.txt
skills/report-quality-check/: SKILL.md
tests/: test_config_and_cleaning.py  test_pipeline_mock.py  test_source_evaluation.py  test_websearch_allowlist.py
(+11 files in other folders)
