[project]
name = "daily-ai-insight"
version = "0.1.0"
description = "Reproducible AI news intelligence workflow for daily insight reports."
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "openai>=1.93.0",
  "pydantic>=2.7.0",
  "python-dateutil>=2.9.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
daily-ai-insight = "daily_ai_insight.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daily_ai_insight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
